--- a/hey.html
+++ b/hey.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Welcome Page</title>
+  <style>
+    body {
+      font-family: Arial;
+      text-align: center;
+      margin-top: 100px;
+      background-color: #f0f8ff;
+    }
+    h1 {
+      color: #2e8b57;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      margin-top: 20px;
+      border: 2px solid aqua;
+      background-color: transparent;
+      color: aqua;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: aqua;
+      color: black;
+    }
+  </style>
 </head>
 <body>
-    welcome to second page
+
+  <h1>Welcome, Admin!</h1>
+  <p>You have successfully signed in.</p>
+  <p>hey bro you're doing well.</p>
+
+  <a href="page2.html"><button>Next Page</button></a>
+
 </body>
 </html>
