--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home Page</title>
+  <title>Login Page</title>
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome!</h1>
-  <a href="hey.html">
-    <button>Sign In</button>
-  </a>
+<h1>Melissa</h1>
+
+  <input type="text" id="email" placeholder="Enter Email or ID"><br>
+  <input type="password" id="password" placeholder="Enter Password"><br>
+  <button onclick="login()">Sign In</button>
+
+  <script>
+    function login() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      if (email === "admin@melisa" && password === "melisa@1234") {
+        window.location.href = "hey.html";
+      } else {
+        alert("Invalid ID or Password. Try again.");
+      }
+    }
+  </script>
+
 </body>
 </html>
